Added event generator for new J2EE sample; fixed problem in ViewService when not using views but there are prior views to reuse
git-svn-id: http://svn.codehaus.org/esper/esper/branches/enhancements110@426 d91eb1b3-1215-0410-9718-d41490442091