@@ -5,6 +5,6 @@
 
 . setenv.sh
 
-MEMORY_OPTIONS="-Xms16m -Xmx16m -XX:+UseParNewGC"
+MEMORY_OPTIONS="-Xms16m -Xmx16m"
 
-$JAVA_HOME/bin/java $MEMORY_OPTIONS -Dlog4j.configuration=log4j.xml -cp ${CLASSPATH} net.esper.example.terminal.recvr.TerminalAlertReceiver $1 $2
+$JAVA_HOME/bin/java $MEMORY_OPTIONS -Dlog4j.configuration=log4j.xml -cp ${CLASSPATH} net.esper.example.terminal.recvr.TerminalServiceReceiver $1 $2
